--- a/web/1/lr1.html
+++ b/web/1/lr1.html
@@ -57,7 +57,7 @@
       </article>
 	</section>
 
-    <section class="block2">
+    <section>
       <article>
         <div class="zag">
 			<p><a name="books"></a></p>
@@ -85,7 +85,7 @@
 		  </div>
 		</article>
   
-		<article class="">
+		<article>
 			<img class="iimg" src="img/img2.jpg">
 			<img class="iimg" src="https://static.yakaboo.ua/media/entity/author/1/_/1_5_16.jpg">
 			<a href="https://anylang.net/ru/books/fr/1984"><img class="iimg"
